--- a/views/pages/ta02.ejs
+++ b/views/pages/ta02.ejs
@@ -12,11 +12,37 @@
         <h1>
           <%= title %>
         </h1>
-        <p>This is the placeholder for Team Activity 02</p>
       </div>
     </div>
     <div class="container">
+      <form action="/ta02/addUser" method="POST">
+        <label for="username">Add Username:</label>
+        <input type="text" name="username" id="username">
+        <input type="submit" value="Submit">
+      </form>
 
+      <form action="/ta02/removeUser" method="POST">
+        <label for="username">Remove Username:</label>
+        <% if (users.length > 0) { console.log(users)%>
+          <select class="userlist" name="username">
+              <% for (let user of users) { console.log(user) %>
+                  <option class="user" value="<%= user %>"><%= user %></option>
+              <% } %>
+          </select>
+      <% } else { %>
+        <h2>No users found.</h2>   
+      <% } %>
+        <input type="submit" value="Submit">
+      </form>
+        <% if (users.length > 0) { console.log(users)%>
+          <ul class="userlist">
+              <% for (let user of users) { console.log(user) %>
+                  <li class="user"><%= user %></li>
+              <% } %>
+          </ul>
+      <% } else { %>
+        <h2>No users found.</h2>   
+      <% } %>
     </div>
 
 
