--- a/views/pages/ta02.ejs
+++ b/views/pages/ta02.ejs
@@ -15,6 +15,12 @@
       </div>
     </div>
     <div class="container">
+      <% if(error != null) { %>
+      <div class="errors">
+        <p> <%= error %>
+        </p>
+      </div>
+      <% } %>
       <form action="/ta02/addUser" method="POST">
         <label for="username">Add Username:</label>
         <input type="text" name="username" id="username">
@@ -23,9 +29,9 @@
 
       <form id="removeForm" action="/ta02/removeUser" method="POST">
         <label for="username">Remove Username:</label>
-        <% if (users.length > 0) { console.log(users)%>
+        <% if (users.length > 0) { %>
           <select form="removeForm" class="userlist" name="username" id="username">
-              <% for (let user of users) { console.log(user) %>
+              <% for (let user of users) { %>
                   <option class="user" value="<%= user %>"><%= user %></option>
               <% } %>
           </select>
